[package]
name = "lonely"
version = "0.1.0"
authors = ["Karl Bergström <karl.anton.bergstrom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = { git = "https://github.com/kabergstrom/async-task.git" }

[dev-dependencies]
futures-util = { version = "0.3", default-features=false }
tokio = { git = "https://github.com/tokio-rs/tokio.git" }
num_cpus = "1.11"

mimalloc = { version = "*", default-features = false }

[features]
# would be nice to support no_std
default = ["std"]
std = []
tls_exec = []